# cargo-extern-fn

./: Cargo.toml  README.md
examples/: person.rs  person_cxx_ffi.rs  person_ffi.rs
src/: cbindgen.rs  cxx.rs  main.rs  utils.rs
tests/: foo.rs  t.rs
