[package]
edition = "2021"
name = "cargo-extern-fn"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
# indexmap = "1"
indexmap = "1"
log = "0.4"
prettyplease = "0.1.22"
proc-macro2 = "1.0"
quote = "1"

# copied from cargo-expand
[dependencies.syn]
default-features = false
features = [
  "full",
  "parsing",
  "printing",
  "visit",
  "visit-mut",
  "derive",
  "clone-impls",
  "extra-traits",
]
version = "1"

[dev-dependencies]
bytemuck = { version = "1", features = ["extern_crate_std", "derive"] }
cxx = "1.0"
pretty_assertions = "1.3"
